<resources>
    <string name="app_name">Oishii</string>
    <string name="fortsett_uten_bruker">fortsett uten bruker</string>
    <string name="spise_inne">spise inne</string>
    <string name="take_away">take away</string>
    <string name="menu">menu</string>
    <string name="ramen">RAMEN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sekunder">sekunder</string>
    <string name="tilbake_til_forsiden">tilbake til forsiden</string>
    <string name="maten_din_er_klar_til_henting_om">maten din er klar til henting om</string>
    <string name="takk_for_bestillingen">takk for bestillingen!</string>
    <string name="title_text">Title</string>
    <string name="price_text">70kr</string>
    <string name="subtract_symbol">-</string>
    <string name="quantity_text">1</string>
    <string name="add_symbol">+</string>
    <string name="check_out_text">til betaling</string>
    <string name="menu_content_title_text">Title</string>
    <string name="menu_content_allergen_example_text">allegens: hvete, soya, sesam, nøtter</string>
    <string name="menu_content_price_example_text">70kr</string>
    <string name="menu_content_add_to_cart_example_text">add to cart</string>
    <string name="timer_example_text">10</string>
    <string name="x_button">X</string>
    <string name="about_text">om</string>
    <string name="place_holder_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi expedita laudantium magni minima numquam odio perferendis qui ratione sapiente! Adipisci beatae commodi cupiditate distinctio ea harum iste laudantium, magni minima modi necessitatibus, nostrum pariatur quae qui quisquam quod recusandae sed similique totam vel vero voluptate voluptates? Eligendi porro provident quaeLorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi expedita laudantium magni minima numquam odio perferendis qui ratione sapiente! Adipisci beatae commodi cupiditate distinctio ea harum iste laudantium, magni minima modi necessitatibus.</string>
    <string name="contact_text">kontakt</string>
    <string name="street_address">oslo veien 1</string>
    <string name="opening_hour_text">åpningstider:</string>
    <string name="opening_hour_time">alle dager: 10–20</string>
    <string name="postal_code_text">1010 oslo</string>
    <string name="authentication_cancel_text">Authentication canceled</string>
    <string name="order_confirmation_title_text">Order confirmation</string>
    <string name="payment_success_text">Payment successful! Your order is being processed!</string>
    <string name="authentication_success_text">Authentication successful</string>
    <string name="authentication_failed_text">Authentication failed, please try again</string>
    <string name="bioid_cancel_button_text">Cancel</string>
    <string name="google_map_location_title_text">Location, Oishii</string>
    <string name="toast_dish_added_text">Dish added to cart</string>
    <string name="notification_order_title_text">Order Complete!</string>
    <string name="notification_order_complete_text">Your order is completed and ready for pickup</string>
    <string name="total_price_text">0</string>
    <string name="bioid_title_text">Verify payment</string>
    <string name="bioid_subtitle_total_text">"Total: "</string>
    <string name="bioid_subtitle_currency_text">",- Kr"</string>
    <string name="cart_total_sum_currency_text">" Kr"</string>
    <string name="currency_text">kr</string>
    <string name="remove_button_text">Remove</string>
    <string name="bestill_bord">bestill bord</string>
    <string name="antall_personer">antall personer:</string>
    <string name="zero">0</string>
    <string name="bekreft_bestilling">bekreft bestilling</string>
    <string name="max_9_personer">max 9 personer</string>
    <string name="dato">Dato:</string>
    <string name="bekreft_valg">bekreft valg</string>
    <string name="date_text">Dato:</string>
    <string name="fill_in_number_of_persons_text">Please fill in number of persons</string>
    <string name="reservation_successful_text">Reservation successful!</string>
    <string name="arrow_back">takes user back to previous page</string>
    <string name="menu_burger">burger meny contains about,contact and booking fragment</string>
    <string name="cart_logo">cart logo</string>
    <string name="main_app_logo">main app logo</string>
    <string name="floating_button">button that takes user to cart fragment</string>
    <string name="take_awat_button">button that takes user to menu fragment</string>
    <string name="logo_timer">oishii logo</string>
    <string name="channel_description_text">Makes a sound and appears as a heads-up notification</string>
    <string name="channel_name_text">In app orders and reservations</string>
    <string name="empty_cart_text">Your cart is empty</string>
</resources>