<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dish_texView1"
        style="@style/CardSubTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_textView_cart"
        style="@style/PriceTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_text"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@id/dish_texView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dish_texView1" />

    <TextView
        android:id="@+id/minus_textView"
        style="@style/CartQuantityTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantity_textView" />

    <TextView
        android:id="@+id/quantity_textView"
        style="@style/CartQuantityTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_text"
        app:layout_constraintStart_toEndOf="@+id/minus_textView"
        app:layout_constraintTop_toBottomOf="@id/dish_texView1" />

    <TextView
        android:id="@+id/plus_textView"
        style="@style/CartQuantityTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_symbol"
        app:layout_constraintStart_toEndOf="@id/quantity_textView"
        app:layout_constraintTop_toTopOf="@id/quantity_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>