<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.CalendarFragment">

    <!--ScrollView added here to support smaller screen on this page-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView"
                style="@style/fragmentHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bestill_bord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:background="@drawable/custom_black_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/numberOfPerson_tv"
                style="@style/ContactTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_medium"
                android:padding="@dimen/padding_button"
                android:text="@string/antall_personer"
                app:layout_constraintStart_toStartOf="@id/calendar_view"
                app:layout_constraintTop_toBottomOf="@id/calendar_view" />


            <EditText
                android:id="@+id/numberOfPerson_editText"
                style="@style/ContactTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/zero"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/max_9_personer"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/padding_button"
                app:layout_constraintEnd_toEndOf="@+id/calendar_view"
                app:layout_constraintStart_toEndOf="@id/numberOfPerson_tv"
                app:layout_constraintTop_toTopOf="@id/numberOfPerson_tv" />

            <TextView
                android:id="@+id/selected_date_tv"
                style="@style/ContactTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button"
                android:text="@string/dato"
                app:layout_constraintStart_toStartOf="@id/numberOfPerson_tv"
                app:layout_constraintTop_toBottomOf="@id/numberOfPerson_tv" />

            <TextView
                android:id="@+id/confirm_reservation_tv"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:layout_marginBottom="@dimen/margin_xl"
                android:text="@string/bekreft_bestilling"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selected_date_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>